--- a/.gitignore
+++ b/.gitignore
@@ -1,63 +1,2 @@
-# Prerequisites
-*.d
-
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
-
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.out
-*.app
-*.i*86
-*.x86_64
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
-*.xml
-*.xml
-*.prefs
-Debug/makefile
-*.list
-*.bin
-*.list
-*.bin
-*.list
-Debug/Probe_LA_v5_calibrate_table.bin
-Debug/Probe_LA_v5_calibrate_table.list
-
 /.vscode
+/Debug/
